# quixo

./: CMakeLists.txt  README.md
content/: stones.psd
src/: main.cpp
src/bots/: bot.hpp  mctsbot.hpp  player.cpp  player.hpp  randombot.hpp
src/eval/: league.cpp  league.hpp  tracker.cpp  tracker.hpp
src/game/: board.cpp  board.hpp  game.cpp  game.hpp
src/graphics/: guibot.cpp  guibot.hpp  renderboard.cpp  renderboard.hpp
src/utils/: random.cpp  random.hpp  stackalloc.hpp  threadpool.hpp
